# Cowdia

./: .codacy.yml  .gitignore  .lgtm.yml  CMakeLists.txt  CMakeSettings.json  README.md
CMake/: CompileOptions.cmake  FindD3D12.cmake
Extensions/D3D12Renderer/: CMakeLists.txt  D3D12Common.hpp  D3D12Exception.cc  D3D12Exception.hpp  D3D12Plugin.cc  D3D12Plugin.hpp  D3D12RenderSystem.cc  D3D12RenderSystem.hpp  D3D12RenderWindow.cc  D3D12RenderWindow.hpp  D3D12Renderer.cc  D3D12Renderer.hpp  PluginMain.cc
Extensions/TestApp/: CMakeLists.txt  main.cc
Includes/: foo.hpp
Includes/Cowdia/: foo.hpp
Includes/Cowdia/Core/: Application.hpp  Common.hpp  Engine.hpp  Exception.hpp  Log.hpp  LogManager.hpp  Plugin.hpp  PluginAssembly.hpp  PluginManager.hpp
Includes/Cowdia/Game/: Scene.hpp  SceneManager.hpp
Includes/Cowdia/Math/: Angle.hpp  Constants.hpp  Matrix.hpp  Quaternion.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorBase.hpp
Includes/Cowdia/Mesh/: MeshLoader.hpp
Includes/Cowdia/Rendering/: RenderSystem.hpp  RenderWindow.hpp  Renderer.hpp
Includes/Cowdia/Types/: Color.hpp  Rect.hpp
Includes/Cowdia/Utils/: ComPtr.hpp  Singleton.hpp
Sources/Cowdia/: CMakeLists.txt
Sources/Cowdia/Core/: Engine.cc  Exception.cc  Log.cc  LogManager.cc  Plugin.cc  PluginAssembly.cc  PluginManager.cc
Sources/Cowdia/Game/: SceneManager.cc
Sources/Cowdia/Math/: Angle.cc  Matrix.cc  Quaternion.cc  Vector2.cc  Vector3.cc  Vector4.cc
Sources/Cowdia/Mesh/: Mesh.cc  MeshLoader.cc
Sources/Cowdia/Rendering/: RenderWindow.cc
Tests/UnitTests/: CMakeLists.txt
Tests/UnitTests/Math/: AngleTests.cc  MatrixTests.cc  VectorTests.cc
Tests/UnitTests/Types/: ColorTests.cc  RectTests.cc
